--- a/app/views/import/configurations/_account_import.html.erb
+++ b/app/views/import/configurations/_account_import.html.erb
@@ -1,10 +1,10 @@
 <%# locals: (import:) %>
 
 <%= styled_form_with model: @import, url: import_configuration_path(@import), scope: :import, method: :patch, class: "space-y-4" do |form| %>
-  <%= form.select :entity_type_col_label, import.csv_headers, { include_blank: "Leave empty", label: "Entity Type" } %>
-  <%= form.select :name_col_label, import.csv_headers, { include_blank: "Leave empty", label: "Name" }, required: true %>
-  <%= form.select :amount_col_label, import.csv_headers, { include_blank: "Leave empty", label: "Balance" }, required: true %>
-  <%= form.select :currency_col_label, import.csv_headers, { include_blank: "Default", label: "Currency" } %>
+  <%= form.select :entity_type_col_label, import.csv_headers, { include_blank: t("import.configurations.account_import.leave_empty"), label: t("import.configurations.account_import.entity_type") } %>
+  <%= form.select :name_col_label, import.csv_headers, { include_blank: t("import.configurations.account_import.leave_empty"), label: t("import.configurations.account_import.name") }, required: true %>
+  <%= form.select :amount_col_label, import.csv_headers, { include_blank: t("import.configurations.account_import.leave_empty"), label: t("import.configurations.account_import.balance") }, required: true %>
+  <%= form.select :currency_col_label, import.csv_headers, { include_blank: t("import.configurations.account_import.default"), label: t("import.configurations.account_import.currency") } %>
 
-  <%= form.submit "Apply configuration", disabled: import.complete? %>
+  <%= form.submit t("import.configurations.account_import.apply_configuration"), disabled: import.complete? %>
 <% end %>
