--- a/app/views/rule/conditions/_condition.html.erb
+++ b/app/views/rule/conditions/_condition.html.erb
@@ -9,7 +9,7 @@
   <%# Condition groups pass in show_prefix: false for subconditions since the ANY/ALL selector makes that clear %>
   <% if show_prefix %>
     <div class="pl-2" data-condition-prefix>
-      <span class="font-medium uppercase text-xs">and</span>
+      <span class="font-medium uppercase text-xs"><%= t("rule.conditions.condition.and") %></span>
     </div>
   <% end %>
 
@@ -27,9 +27,9 @@
         <%= form.select :value, condition.options, {} %>
       <% else %>
         <% if condition.filter.type == "number" %>
-          <%= form.number_field :value, placeholder: "10", step: 0.01 %>
+          <%= form.number_field :value, placeholder: t("rule.conditions.condition.number_placeholder"), step: 0.01 %>
         <% else %>
-          <%= form.text_field :value, placeholder: "Enter a value" %>
+          <%= form.text_field :value, placeholder: t("rule.conditions.condition.enter_value") %>
         <% end %>
       <% end %>
     </div>
