--- a/app/views/accounts/_account_type.html.erb
+++ b/app/views/accounts/_account_type.html.erb
@@ -7,5 +7,5 @@
     hex_color: accountable.color,
   ) %>
 
-  <%= accountable.display_name.singularize %>
+  <%= t("accounts.types.#{accountable.class.name.underscore}") %>
 <% end %>
