--- a/app/views/accounts/index/_account_groups.erb
+++ b/app/views/accounts/index/_account_groups.erb
@@ -3,7 +3,7 @@
 <% accounts.group_by(&:accountable_type).sort_by { |group, _| group }.each do |group, accounts| %>
   <div class="bg-container-inset p-1 rounded-xl">
     <div class="flex items-center px-4 py-2 text-xs font-medium text-secondary">
-      <p><%= Accountable.from_type(group).display_name %></p>
+      <p><%= t("accounts.types.#{group.underscore}") %></p>
       <span class="text-subdued mx-2">&middot;</span>
       <p><%= accounts.count %></p>
 
