--- a/app/views/settings/_settings_nav.html.erb
+++ b/app/views/settings/_settings_nav.html.erb
@@ -56,7 +56,7 @@ nav_sections = [
       variant: "ghost",
     ) %>
     <span class="hidden md:block uppercase bg-surface-inset-hover rounded-sm px-1 py-0.5 text-xs text-secondary shadow-sm ml-1">
-      <kbd>esc</kbd>
+      <kbd><%= t(".esc") %></kbd>
     </span>
   </div>
   <nav class="space-y-4 hidden md:block">
