Extract hardcoded English text to i18n translations
- Add translations for imports nav steps (Upload, Configure, Clean, Map, Confirm)
- Add translations for budgets summary (expected income, earned, over, left, etc.)
- Add translations for dashboard balance sheet table headers (Name, Weight, Value)
- Add translations for family exports list (Exporting, confirmations, No exports)
- Add translations for accounts container buttons (Previous, Next)
- Add translations for assistant messages tool calls
- Add translations for holdings cost basis cell (Set)
- Add translations for rules edit page (Back to rules, Edit rule)
- Add translations for settings hosting templates (setup instructions)
- Add translations for transfers account links (Data Error)
- Add French translations for other_assets balance_tracking_info

--- a/app/views/rules/edit.html.erb
+++ b/app/views/rules/edit.html.erb
@@ -1,11 +1,11 @@
-<%= link_to "Back to rules", rules_path %>
+<%= link_to t("rules.edit.back_to_rules"), rules_path %>
 
 <%= render DS::Dialog.new do |dialog| %>
   <%
     title = if @rule.name.present?
-              "Edit #{@rule.resource_type} rule \"#{@rule.name}\""
+              t("rules.edit.title_with_name", resource_type: @rule.resource_type, name: @rule.name)
             else
-              "Edit #{@rule.resource_type} rule"
+              t("rules.edit.title", resource_type: @rule.resource_type)
             end
   %>
   <% dialog.with_header(title: title) %>
