--- a/app/views/transfers/_account_links.html.erb
+++ b/app/views/transfers/_account_links.html.erb
@@ -7,7 +7,7 @@
     <%= link_to first_account.name, account_path(first_account, tab: "activity"), class: "hover:underline", data: { turbo_frame: "_top" } %>
   <% else %>
     <span class="text-warning text-xs italic" title="Transfer ID: <%= transfer.id %>">
-      Data Error: Missing account
+      <%= t("transfers.account_links.data_error_missing_account") %>
     </span>
   <% end %>
 
@@ -19,7 +19,7 @@
     <%= link_to second_account.name, account_path(second_account, tab: "activity"), class: "hover:underline", data: { turbo_frame: "_top" } %>
   <% else %>
     <span class="text-warning text-xs italic" title="Transfer ID: <%= transfer.id %>">
-      Data Error: Missing account
+      <%= t("transfers.account_links.data_error_missing_account") %>
     </span>
   <% end %>
 </div>
